Update VirtualThreadExample1.java