@@ -4,7 +4,7 @@ public class VirtualThreadExample1 {
 
     public static void main(String[] args) throws InterruptedException {
         Runnable runnable = () -> System.out.println("Inside thread: " + Thread.currentThread());
-        Thread platformThread = new Thread(runnable);
+        Thread platformThread = Thread.ofPlatform().unstarted(runnable);
 
         platformThread.start();
         platformThread.join();
